internal/converter/fixtures/output/ingressroute_host.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: host-check
  namespace: sample
spec:
  entryPoints:
    - http
  routes:
    - kind: Rule
      match: Host(`example.com`) && PathPrefix(`/`)
      priority: 1000
      services:
        - name: airflow-web
          port: 8080
    - kind: Rule
      match: (Host(`example.com`) || Host(`example2.com`)) && PathPrefix(`/`)
      priority: 1000
      services:
        - name: airflow-web
          port: 8080
    - kind: Rule
      match: Host(`example.com`) || (Host(`example.org`) && (Path(`/traefik`) || Path(`/dashboard`)))
      priority: 1000
      services:
        - name: airflow-web
          port: 8080
