internal/converter/fixtures/output/ingressroute_multi_doc.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: mychain
  namespace: default
spec:
  chain:
    middlewares:
      - name: stripprefix
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /tobestripped
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: test2.route
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`foo.com`) && PathPrefix(`/tobestripped`)
      middlewares:
        - name: mychain
      services:
        - name: whoami
          port: 80
