internal/converter/fixtures/output/middleware_strip_prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: app-internet
  namespace: app
spec:
  stripPrefix:
    prefixes:
      - /api/platform
